--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Teste</h1>
+  <div id="app">
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+  </div>
 </body>
 </html>
