--- a/02/index.html
+++ b/02/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Twiiter</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Twiiter</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header id="main-header">
+      <a href="#" class="logo" title="Homepage">
+        <img src="./images/logo.svg" alt="Logo Twitter" />
+      </a>
+      <div class="container">
+        <nav>
+          <ul>
+            <li><img src="./images/home.svg" alt="Home" />Home</li>
+            <li>
+              <img
+                src="./images/notification.svg"
+                alt="Notifications"
+              />Notifications
+            </li>
+            <li><img src="./images/message.svg" alt="Message" />Message</li>
+          </ul>
+        </nav>
+        <div class="side">
+          <input type="text" placeholder="Search on Twitter" />
+          <img src="./images/avatar.png" alt="Avatar" />
+          <button>Tweet</button>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
