:rocket: Hero is ready

--- a/02/index.html
+++ b/02/index.html
@@ -31,5 +31,9 @@
         </div>
       </div>
     </header>
+
+    <div class="banner">
+      <h1>Twitter Rocketseat</h1>
+    </div>
   </body>
 </html>
