--- a/02/index.html
+++ b/02/index.html
@@ -35,5 +35,41 @@
     <div class="banner">
       <h1>Twitter Rocketseat</h1>
     </div>
+
+    <div class="bar">
+      <div class="container">
+        <ul>
+          <li class="active">
+            <span>Tweets</span>
+            <strong>3931</strong>
+          </li>
+          <li>
+            <span>Following</span>
+            <strong>654</strong>
+          </li>
+          <li>
+            <span>Followers</span>
+            <strong>387</strong>
+          </li>
+          <li>
+            <span>Favorites</span>
+            <strong>265</strong>
+          </li>
+          <li>
+            <span>Lists</span>
+            <strong>8</strong>
+          </li>
+          <li>
+            <span>Moments</span>
+            <strong>0</strong>
+          </li>
+        </ul>
+
+        <div class="actions">
+          <button>Follow</button>
+          <img src="./images/more-vertical.svg" alt="More actions">
+        </div>
+      </div>
+    </div>
   </body>
 </html>
