:art: Profile column is ready

--- a/02/index.html
+++ b/02/index.html
@@ -67,9 +67,70 @@
 
         <div class="actions">
           <button>Follow</button>
-          <img src="./images/more-vertical.svg" alt="More actions">
+          <img src="./images/more-vertical.svg" alt="More actions" />
         </div>
       </div>
     </div>
+
+    <main class="container wrapper-content">
+      <aside class="profile">
+        <img src="./images/avatar.png" class="avatar" alt="Lauriel Mesquita" />
+        <h1>Lauriel Mesquita</h1>
+        <span>@laurielmesquita</span>
+        <p>Web, Design and Rock'n roll Partiner/UI|UX Design @isotech</p>
+        <ul>
+          <li class="bioList">
+            <img class="icon" src="./images/location.svg" alt="Place" /> Namur, Belgium
+          </li>
+          <li><img class="icon" src="./images/link.svg" alt="URL" /> lauriel.cc</li>
+          <li>
+            <img class="icon" src="./images/clock.svg" alt="Joined" /> Joined January 2021
+          </li>
+          <li>
+            <img class="icon" src="./images/born.svg" alt="Born" /> Born the 20th of 1978
+          </li>
+        </ul>
+
+        <div class="widget followers">
+          <strong>
+            <img class="icon" src="./images/user.svg" alt="Falowers" />
+            73 followers that you know
+          </strong>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="widget images">
+          <strong>
+            <img class="icon" src="./images/image.svg" alt="Images" />
+            266 photos and views
+          </strong>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </aside>
+
+      <secton class="timeline">
+        <h2>timeline</h2>
+      </secton>
+      <aside class="widgets">
+        <h2>widgets</h2>
+      </aside>
+    </main>
   </body>
 </html>
