:sparkles: Aside widgets are ready

--- a/index.html
+++ b/index.html
@@ -80,14 +80,19 @@
         <p>Web, Design and Rock'n roll Partiner/UI|UX Design @isotech</p>
         <ul>
           <li class="bioList">
-            <img class="icon" src="./images/location.svg" alt="Place" /> Namur, Belgium
-          </li>
-          <li><img class="icon" src="./images/link.svg" alt="URL" /> lauriel.cc</li>
-          <li>
-            <img class="icon" src="./images/clock.svg" alt="Joined" /> Joined January 2021
+            <img class="icon" src="./images/location.svg" alt="Place" /> Namur,
+            Belgium
           </li>
           <li>
-            <img class="icon" src="./images/born.svg" alt="Born" /> Born the 20th of 1978
+            <img class="icon" src="./images/link.svg" alt="URL" /> lauriel.cc
+          </li>
+          <li>
+            <img class="icon" src="./images/clock.svg" alt="Joined" /> Joined
+            January 2021
+          </li>
+          <li>
+            <img class="icon" src="./images/born.svg" alt="Born" /> Born the
+            20th of 1978
           </li>
         </ul>
 
@@ -125,11 +130,60 @@
         </div>
       </aside>
 
-      <secton class="timeline">
+      <section class="timeline">
         <h2>timeline</h2>
-      </secton>
+      </section>
+
       <aside class="widgets">
-        <h2>widgets</h2>
+        <div class="widget follow">
+          <div class="title">
+            <strong>Who to follow</strong>
+            <a href="#fake">Refresh</a>
+            <a href="#fake">View All</a>
+          </div>
+
+          <ul>
+            <li>
+              <div class="profile">
+                <img src="./images/avatar.png" alt="Avatar" />
+                <div class="info">
+                  <strong>
+                    Isotech
+                    <span>@isotech</span>
+                  </strong>
+                  <button>Follow</button>
+                </div>
+              </div>
+              <a href="">x</a>
+            </li>
+            <li>
+              <div class="profile">
+                <img src="./images/avatar.png" alt="Avatar" />
+                <div class="info">
+                  <strong>
+                    Isotech
+                    <span>@isotech</span>
+                  </strong>
+                  <button>Follow</button>
+                </div>
+              </div>
+              <a href="">x</a>
+            </li>
+            <li>
+              <div class="profile">
+                <img src="./images/avatar.png" alt="Avatar" />
+                <div class="info">
+                  <strong>
+                    Isotech
+                    <span>@isotech</span>
+                  </strong>
+                  <button>Follow</button>
+                </div>
+              </div>
+              <a href="">x</a>
+            </li>
+          </ul>
+        </div>
       </aside>
     </main>
   </body>
