--- a/index.html
+++ b/index.html
@@ -131,7 +131,110 @@
       </aside>
 
       <section class="timeline">
-        <h2>timeline</h2>
+        <nav>
+          <a href="#fake" class="selected">Tweets</a>
+          <a href="#fake">Tweets and replys</a>
+          <a href="#fake">Medias</a>
+        </nav>
+
+        <ul class="tweets">
+          <li>
+            <img src="./images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Lauriel Mesquita<span> @isotech</span></strong>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident neque dolore voluptates reiciendis minus temporibus eaque laborum distinctio ipsa?</p>
+              <div class="actions">
+                <a href="#fake"><img src="./images/comment.svg" class="icon" alt="Comments">3</a>
+                <a href="#fake"><img src="./images/retweet.svg" class="icon" alt="Retweets">16</a>
+                <a href="#fake"><img src="./images/heart.svg" class="icon" alt="Likes">5</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="./images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Lauriel Mesquita<span> @isotech</span></strong>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident neque dolore voluptates reiciendis minus temporibus eaque laborum distinctio ipsa?</p>
+              <div class="actions">
+                <a href="#fake"><img src="./images/comment.svg" class="icon" alt="Comments">3</a>
+                <a href="#fake"><img src="./images/retweet.svg" class="icon" alt="Retweets">16</a>
+                <a href="#fake"><img src="./images/heart.svg" class="icon" alt="Likes">5</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="./images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Lauriel Mesquita<span> @isotech</span></strong>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident neque dolore voluptates reiciendis minus temporibus eaque laborum distinctio ipsa?</p>
+              <div class="actions">
+                <a href="#fake"><img src="./images/comment.svg" class="icon" alt="Comments">3</a>
+                <a href="#fake"><img src="./images/retweet.svg" class="icon" alt="Retweets">16</a>
+                <a href="#fake"><img src="./images/heart.svg" class="icon" alt="Likes">5</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="./images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Lauriel Mesquita<span> @isotech</span></strong>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident neque dolore voluptates reiciendis minus temporibus eaque laborum distinctio ipsa?</p>
+              <div class="actions">
+                <a href="#fake"><img src="./images/comment.svg" class="icon" alt="Comments">3</a>
+                <a href="#fake"><img src="./images/retweet.svg" class="icon" alt="Retweets">16</a>
+                <a href="#fake"><img src="./images/heart.svg" class="icon" alt="Likes">5</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="./images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Lauriel Mesquita<span> @isotech</span></strong>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident neque dolore voluptates reiciendis minus temporibus eaque laborum distinctio ipsa?</p>
+              <div class="actions">
+                <a href="#fake"><img src="./images/comment.svg" class="icon" alt="Comments">3</a>
+                <a href="#fake"><img src="./images/retweet.svg" class="icon" alt="Retweets">16</a>
+                <a href="#fake"><img src="./images/heart.svg" class="icon" alt="Likes">5</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="./images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Lauriel Mesquita<span> @isotech</span></strong>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident neque dolore voluptates reiciendis minus temporibus eaque laborum distinctio ipsa?</p>
+              <div class="actions">
+                <a href="#fake"><img src="./images/comment.svg" class="icon" alt="Comments">3</a>
+                <a href="#fake"><img src="./images/retweet.svg" class="icon" alt="Retweets">16</a>
+                <a href="#fake"><img src="./images/heart.svg" class="icon" alt="Likes">5</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="./images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Lauriel Mesquita<span> @isotech</span></strong>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident neque dolore voluptates reiciendis minus temporibus eaque laborum distinctio ipsa?</p>
+              <div class="actions">
+                <a href="#fake"><img src="./images/comment.svg" class="icon" alt="Comments">3</a>
+                <a href="#fake"><img src="./images/retweet.svg" class="icon" alt="Retweets">16</a>
+                <a href="#fake"><img src="./images/heart.svg" class="icon" alt="Likes">5</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="./images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Lauriel Mesquita<span> @isotech</span></strong>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident neque dolore voluptates reiciendis minus temporibus eaque laborum distinctio ipsa?</p>
+              <div class="actions">
+                <a href="#fake"><img src="./images/comment.svg" class="icon" alt="Comments">3</a>
+                <a href="#fake"><img src="./images/retweet.svg" class="icon" alt="Retweets">16</a>
+                <a href="#fake"><img src="./images/heart.svg" class="icon" alt="Likes">5</a>
+              </div>
+            </div>
+          </li>
+        </ul>
       </section>
 
       <aside class="widgets">
